---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: ????
  Changes:
    - Updated readme
    - Items are refreshed periodically, opening gui when needed
  Bugfixes:
    - Fixed active items changing order of filters
    - Handling players who are removed
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023-12-11
  Changes:
    - Middle button to put ghost in hand, to manually set filters or conditions
    - Add active items to items, so they can be easily unfiltered or unrequested
  Bugfixes:
    - Fixed invalid entity when getting button description
    - Fixed opening moving cargo wagons and spidertron
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2023-12-07
  Bugfixes:
    - Fixed opening non-filtered entities
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2023-12-07
  Changes:
    - Changed interface to use left/right-click to add and remove filters
    - Added support for logistic storage, requester and buffer chests
    - Add loader1x2 and loader1x1 support
    - Add item suggestions for inserters grabbing from/setting on underground belts, splitters, and loaders
    - Add rocket launch silo suggestions
    - Add fuel / burnt fuel result suggestions
    - Use multiple columns when there are lots of item suggestions
    - Added control tooltips per entity type
    - Support filters on cars and cargo wagons
    - Support existing/all filters on cars and cargo wagons
    - Support increasing/decreasing requests by 5 stacks and full container
  Bugfixes:
    - Fixed crash when selecting a fluid from a signal as a filter by no longer showing non-item signals from the circuit network