@@ -7,6 +7,7 @@ Date: ????
   Bugfixes:
     - Fixed active items changing order of filters
     - Handling players who are removed
+    - Fixed items changing order on update
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.11
 Date: 2023-12-11
